<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonel.appzing.main.MainActivity">

    <RelativeLayout
        android:gravity="center"
        android:background="@color/nen_dn"
        android:layout_width="304dp"
        android:layout_height="493dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:gravity="center"
            android:layout_above="@+id/ll_dn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="150dp"
                android:layout_height="100dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/ll_dn"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/user"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:hint="@string/user"
                android:textColor="@color/color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:hint="@string/pass"
                android:textColor="@color/color_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/login"
                android:id="@+id/btnDN"
                android:textColor="@color/color_text"
                android:background="@drawable/selectorbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
            <Button
                android:textAllCaps="false"
                android:paddingRight="10dp"
                android:layout_toLeftOf="@+id/center"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/regiter"
                android:layout_marginBottom="15dp"
                android:text="@string/register"
                android:background="@drawable/selectorbtndn"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/center"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:layout_toRightOf="@+id/center"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/qmk"
                android:layout_marginBottom="15dp"
                android:text="@string/qmk"
                android:background="@drawable/selectorbtndn"
                android:textColor="@color/color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
